plugins {
	id 'java'
	id "io.github.liplum.mgpp" version "1.1.4"
}


tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.access=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.platform=ALL-UNNAMED")
//	options.compilerArgs.addAll("-classpath", "libs/libs.jar")

//	options.compilerArgs.addAll("--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED")
}

group 'org.example'
version '1.0'
sourceSets {
	main {
		java.srcDirs = ["src"]
	}
}
targetCompatibility = 11
sourceCompatibility = 11
repositories {
	mavenCentral()
	mindustryRepo()
}
def MdtDataDir = "E:/Users/ASUS/Desktop/Mindustry136"
def VERSION = "1.2.3"

dependencies {
//	implementation "com.github.Anuken.Arc:arc-core:v136"
//	implementation files("E:/Users/ASUS/Desktop/Mods/Rhino/build/tmp/deploy/Rhino-1.0.jar")

//	implementation "com.github.EB-wilson:JavaDynamilizer:V1.4-A3"
//	implementation files("libs/MagicAccessorImpl_PUBLIC.class")
	compileOnly files(
			MdtDataDir + "/Mindustry_android.jar",
			"libs/libs.jar",
			"E:/Users/ASUS/Desktop/Mods/Android_dalvik-1.0.jar",
	)
//	implementation files("E:/Users/ASUS/Desktop/Mindustry136/Mindustry.jar")
//	implementation "com.a1lipay.euler:andfix:0.5.0@aar"
	implementation files(
//			"libs/asm-5.1.jar",
			"E:/Users/ASUS/Desktop/Mods/TmpMods/AndroidField/AndroidField.jar"
	)
//	compileOnly files("E:/Program Files/AndroidStudio/sdk/platforms/android-32/android.jar")
//	implementation files("libs/reflectasm.jar")

	importMindustry()
//	compileOnly files("assets/invokeFunc.jar")
}

mindustry {
	dependency {
//        mindustry version: '22810'
		// To use jitpack, https://jitpack.io/#anuken/mindustryjitpack
		mindustry version: 'v140.3'
		arc version: 'v140'
	}
	client {
		official version: 'v138'
		fromLocal MdtDataDir + "/Mindustry.jar"
		args += ['-debug']
	}
	meta << ModMeta(
			version: VERSION
	)
	meta.displayName = "better_js"
	def name = project.archivesBaseName
	deploy {
		baseName = name
	}
	dexJar {
		options.minApi = '26'
	}

	run {
//		if (true) throw new RuntimeException()
		keepOtherMods
//		setDataDefault()
		dataDir = MdtDataDir
	}
}

import arc.files.Fi;

task playGame(dependsOn: classes, type: JavaExec) {
	dependsOn jar
	doFirst {
		def modFi = project.archivesBaseName + "-1.0.jar"
		new Fi("" + buildDir).child("libs").child(modFi).copyTo(new Fi(MdtDataDir).child("mods").child(modFi))
	}
	//运行游戏目录
	def gameFile = new File(MdtDataDir + "/Mindustry.jar")
	main = "-jar"
	args = [
			gameFile.path
			/*,"-debug"*/
	]
}

task ZComplieAll {
	dependsOn deploy
}
mindustryAssets {
	// Set the assets root
	rootAt "$projectDir/assets"
}

test {
	useJUnitPlatform()
}
